--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Colour Book - Draw and paint</string>
+    <string name="app_name">Colour Book</string>
     <string name="color_pallet">color_pallet</string>
 </resources>
